<resources>
    <string name="app_name">Zakazcoffee</string>
    <string name="new_here_create_an_account">У вас нет аккаунта? Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="name_or_email">Имя или E-mail</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="full_name">Имя</string>
    <string name="continue_reg">Продолжить</string>
    <string name="complete_reg">Готово</string>
    <string name="sent_mail_description">На ваш E-mail было отправлено письмо, с ссылкой для подтверждения регистрации.</string>
    <string name="resend_email">Отправить письмо повторно</string>
    <string name="main">Главная</string>
    <string name="basket">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="more">Ещё</string>
    <string name="category">Категории</string>
    <string name="top_coffee">Топ кофе</string>
    <string name="news">Новости</string>
    <string name="recently_watched">Недавно просмотренные</string>
    <string name="detail">Подробнее</string>
    <string name="history">История заказов</string>
    <string name="buyers_account">Счет покупателя</string>
    <string name="delivery_rules">Правила доставки</string>
    <string name="points">Накопительные баллы</string>
    <string name="invite_friend">Пригласи друга</string>
    <string name="wallet">Пополнить кошелек</string>
    <string name="total_rules">Правила</string>
</resources>
